remove license-gen

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -2027,36 +2027,6 @@ jobs:
       - run: make -C bindings force-gen
       - run: make -C bindings check/python
 
-  find-main-docker-images:
-    docker:
-      - image: <<pipeline.parameters.docker-image>>
-    steps:
-      - setup_remote_docker:
-          version: previous
-      - login-docker:
-          username: ${DOCKER_USER}
-          password: ${DOCKER_PASS}
-      - checkout
-      - add-and-fetch-upstream
-      - run:
-          name: Check for Latest Main Docker Image
-          command: |
-            git fetch origin main && git checkout main
-            export LATEST_MAIN_SHA=$(git rev-parse HEAD)
-            for i in {1..20}; do
-              if curl -fsSL "https://registry.hub.docker.com/repository/determinedai/hpe-mlde-master/${LATEST_MAIN_SHA}/" > /dev/null; then
-                echo "Master tag '${LATEST_MAIN_SHA}' found."
-                if curl -fsSL "https://registry.hub.docker.com/repository/determinedai/hpe-mlde-agent/${LATEST_MAIN_SHA}/" > /dev/null; then
-                  echo "Agent tag '${LATEST_MAIN_SHA}' found."
-                  exit 0
-                fi
-              fi
-              echo "Tag '${LATEST_MAIN_SHA}' not found (Attempt $i/20), retrying in 60s..."
-              sleep 60
-            done
-            echo "Tag '${LATEST_MAIN_SHA}' not found after 20 attempts."
-            exit 1
-
   upload-try-now-template:
     docker:
       - image: <<pipeline.parameters.docker-image>>
@@ -3260,7 +3230,6 @@ jobs:
                   - run:
                       name: Start additionalrm minikube
                       command: minikube start --profile additionalrm --kubernetes-version <<parameters.k8s-version>>
-
       - install-devcluster
       - unless:
           condition: <<parameters.managed-devcluster>>
@@ -3272,24 +3241,13 @@ jobs:
       - when:
           condition: <<parameters.upgrade>>
           steps:
-            # Stop devcluster running on the past release.
-            - stop-devcluster
             - reinstall-go
-            - license-gen
             - run: git checkout ${LATEST_MAIN_SHA}
             - run: make -C master build
             - run: make -C agent build
-            - persist_to_workspace:
-                root: .
-                paths:
-                  - "master/build"
-                  - "agent/build"
-
-            # TODO CAROLINA
-            - setup-python-venv:
-                determined: True
-                extra-requirements-file: "e2e_tests/tests/requirements.txt"
-                executor: <<pipeline.parameters.machine-image>>
+            # not persisting to workspace because we still want first run of test to run w/ old branch build
+            # Stop devcluster running on the past release.
+            - stop-devcluster
             - install-devcluster
             - unless:
                 condition: <<parameters.managed-devcluster>>
@@ -3297,7 +3255,6 @@ jobs:
                   - start-devcluster:
                       devcluster-config: <<parameters.devcluster-config>>
                       target-stage: <<parameters.target-stage>>
-
 
       - pull-task-images:
           tf2: <<parameters.tf2>>
@@ -4479,6 +4436,9 @@ workflows:
           mark: e2e_cpu_2a
           target-stage: agent2
           devcluster-config: double-priority.devcluster.yaml
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-cpu-oauth
@@ -4490,6 +4450,9 @@ workflows:
           devcluster-config: oauth.devcluster.yaml
           mark: test_oauth
           target-stage: agent1
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-cpu-model-registry-rbac
@@ -4501,6 +4464,9 @@ workflows:
           devcluster-config: rbac-model-registry.yaml
           mark: test_model_registry_rbac
           target-stage: agent1
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-managed-devcluster
@@ -4517,6 +4483,9 @@ workflows:
           # so `compare_stats` cannot get the full logs from `det master logs`.
           extra-pytest-flags: "--no-compare-stats"
           collect-det-job-logs: false
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-managed-devcluster-resource-pools
@@ -4531,6 +4500,9 @@ workflows:
           managed-devcluster: true
           extra-pytest-flags: "--no-compare-stats"
           collect-det-job-logs: false
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-multi-k8s
@@ -4545,6 +4517,9 @@ workflows:
           devcluster-config: multi-k8s.devcluster.yaml
           run-minikubes: true
           multi-k8s: true
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-single-k8s
@@ -4557,6 +4532,9 @@ workflows:
           target-stage: master
           devcluster-config: single-k8s.devcluster.yaml
           run-minikubes: true
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-port-registry
@@ -4568,6 +4546,9 @@ workflows:
           devcluster-config: port-registry.devcluster.yaml
           mark: port_registry
           target-stage: agent
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-cpu-elastic
@@ -4580,6 +4561,9 @@ workflows:
           mark: e2e_cpu_elastic
           devcluster-config: elastic.devcluster.yaml
           target-stage: agent
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-postgres10-with-ssl
@@ -4592,6 +4576,9 @@ workflows:
           devcluster-config: postgres-with-ssl.devcluster.yaml
           target-stage: agent
           postgres-version: "10"
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-postgres14-with-ssl
@@ -4604,6 +4591,9 @@ workflows:
           devcluster-config: postgres-with-ssl.devcluster.yaml
           target-stage: agent
           postgres-version: "14"
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-old-agent-versions
@@ -4618,6 +4608,7 @@ workflows:
           matrix:
             parameters:
               agent-version: ["0.17.10"]
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-agent-connection-loss
@@ -4630,6 +4621,9 @@ workflows:
           wait-for-master: false
           extra-pytest-flags: "--no-compare-stats"
           collect-det-job-logs: false
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-e2e:
           name: test-e2e-saml
@@ -4641,6 +4635,9 @@ workflows:
           parallelism: 1
           devcluster-config: saml.devcluster.yaml
           mark: e2e_saml
+          matrix:
+            parameters:
+              upgrade: [true, false]
 
       - test-perf:
           name: test-perf
@@ -4801,261 +4798,6 @@ workflows:
                 - main
           requires:
             - package-and-push-system-dev-ee
-
-  test-e2e-release-upgrade:
-    <<: *do-not-run-on-manual-trigger
-    jobs:
-      - build-proto
-      - build-helm
-      - build-react:
-          dev-mode: true
-      - test-e2e-react:
-          name: test-e2e-react-ee
-          ee: true
-          requires:
-            - build-go-ee
-          context:
-            - playwright
-            - github-read
-            - dev-ci-cluster-default-user-credentials
-          filters: *any-upstream
-      - build-docs:
-          requires:
-            - build-helm
-            - build-proto
-      - build-go:
-          name: build-go-ee
-          context: github-read
-      - find-main-docker-images
-      # TODO CAROLINA -- make this weekly 
-
-      - test-e2e:
-          name: test-e2e-rbac
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 1
-          mark: e2e_cpu_rbac
-          devcluster-config: single-rbac.devcluster.yaml
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-cpu
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 6
-          resource-class: xlarge
-          tf2: true
-          mark: e2e_cpu
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-cpu-double
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 5
-          resource-class: large
-          tf2: true
-          mark: e2e_cpu_2a
-          target-stage: agent2
-          devcluster-config: double-priority.devcluster.yaml
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-cpu-oauth
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 1
-          devcluster-config: oauth.devcluster.yaml
-          mark: test_oauth
-          target-stage: agent1
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-cpu-model-registry-rbac
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 1
-          devcluster-config: rbac-model-registry.yaml
-          mark: test_model_registry_rbac
-          target-stage: agent1
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-managed-devcluster
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 4
-          resource-class: large
-          tf2: true
-          mark: managed_devcluster
-          managed-devcluster: true
-          # Managed devcluster restarts the master over the course of the tests,
-          # so `compare_stats` cannot get the full logs from `det master logs`.
-          extra-pytest-flags: "--no-compare-stats"
-          collect-det-job-logs: false
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-managed-devcluster-resource-pools
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 4
-          resource-class: large
-          tf2: true
-          mark: managed_devcluster_resource_pools
-          managed-devcluster: true
-          extra-pytest-flags: "--no-compare-stats"
-          collect-det-job-logs: false
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-multi-k8s
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 1
-          tf2: true
-          mark: e2e_multi_k8s
-          target-stage: master
-          devcluster-config: multi-k8s.devcluster.yaml
-          run-minikubes: true
-          multi-k8s: true
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-single-k8s
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 1
-          mark: e2e_single_k8s
-          target-stage: master
-          devcluster-config: single-k8s.devcluster.yaml
-          run-minikubes: true
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-port-registry
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 1
-          devcluster-config: port-registry.devcluster.yaml
-          mark: port_registry
-          target-stage: agent
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-cpu-elastic
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 1
-          resource-class: large
-          mark: e2e_cpu_elastic
-          devcluster-config: elastic.devcluster.yaml
-          target-stage: agent
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-postgres10-with-ssl
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 1
-          mark: e2e_cpu_postgres
-          devcluster-config: postgres-with-ssl.devcluster.yaml
-          target-stage: agent
-          postgres-version: "10"
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-postgres14-with-ssl
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 1
-          mark: e2e_cpu_postgres
-          devcluster-config: postgres-with-ssl.devcluster.yaml
-          target-stage: agent
-          postgres-version: "14"
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-old-agent-versions
-          context:
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 1
-          mark: e2e_cpu_postgres
-          devcluster-config: custom-agent-version.devcluster.yaml
-          target-stage: agent
-          matrix:
-            parameters:
-              agent-version: ["0.17.10"]
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-agent-connection-loss
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 1
-          mark: e2e_cpu_agent_connection_loss
-          devcluster-config: agent-no-connection.devcluster.yaml
-          target-stage: agent
-          wait-for-master: false
-          extra-pytest-flags: "--no-compare-stats"
-          collect-det-job-logs: false
-          upgrade: true
-
-      - test-e2e:
-          name: test-e2e-saml
-          context:
-            - okta
-            - dev-ci-cluster-default-user-credentials
-          requires:
-            - build-go-ee
-            - find-main-docker-images
-          parallelism: 1
-          devcluster-config: saml.devcluster.yaml
-          mark: e2e_saml
-          upgrade: true
 
   test-e2e-longrunning:
     <<: *do-not-run-on-manual-trigger
