Update gh_team: machine-user tag to be machine-users (plural), which is the correct value.

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -2742,7 +2742,7 @@ jobs:
             sudo apt-get install gettext
             sudo apt-get install iproute2
             yes yes | PATH=$HOME/.local/bin:$PATH make slurmcluster \
-              FLAGS="-c <<parameters.container-run-type>> -w <<parameters.workload-manager>> -l '{owner=\\\"determined_ci\\\", gh_team=\\\"machine-user\\\"}'" \
+              FLAGS="-c <<parameters.container-run-type>> -w <<parameters.workload-manager>> -l '{owner=\\\"determined_ci\\\", gh_team=\\\"machine-users\\\"}'" \
               TF_LOCK=false | tee output.log || circleci-agent step halt
           background: true
 
