--- a/examples/hf_trainer_api/hf_language_modeling/adaptive.yaml
+++ b/examples/hf_trainer_api/hf_language_modeling/adaptive.yaml
@@ -9,8 +9,8 @@ resources:
   slots_per_trial: 2
 searcher:
   name: adaptive_asha
-  max_length:
-    batches: 100
+  time_metric: batches
+  max_time: 100
   max_trials: 64
   max_rungs: 4
   divisor: 4
