Per the CircleCI documentation (https://circleci.com/docs/configuration-reference/#checkout), I believe we need to add a git-fetch after checkout to grab additional refs necessary for version.sh to work properly on CI.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,7 @@ jobs:
     steps:
       - gh/install
       - checkout
+      - run: git fetch
 
       # this must be first; default to an empty params list
       - run:
