Add additional git-fetch.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
     executor: continuation/default
     steps:
       - checkout
+      - run: git fetch
       - attach_workspace:
           at: '<<pipeline.parameters.workspace_path>>'
       - continuation/continue:
