--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
     executor: continuation/default
     steps:
       - checkout
-      - run: git fetch
+      - run: git fetch --tags
       - attach_workspace:
           at: '<<pipeline.parameters.workspace_path>>'
       - continuation/continue:
@@ -59,7 +59,7 @@ jobs:
     steps:
       - gh/install
       - checkout
-      - run: git fetch
+      - run: git fetch --tags
 
       # this must be first; default to an empty params list
       - run:
