--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
       - gh/install
       - checkout
       - run: git fetch --tags
-      - run: git tag --list
+      - run: echo $SHELL
       - run: git -c versionsort.suffix='-rc' tag --sort='-v:refname:short' --format='%(refname:short)' --no-contains=$(git merge-base HEAD main)
 
       # this must be first; default to an empty params list
